# KatEngineVulkan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
engine/: CMakeLists.txt  config.hpp.in
engine/src/kat/: core.cpp  core.hpp  window.cpp  window.hpp
game_sample/: CMakeLists.txt
game_sample/src/game/: game.cpp
libs/: CMakeLists.txt
libs/katconsrvlib/: CMakeLists.txt
libs/katconsrvlib/include/kat/: consrv.hpp
libs/katconsrvlib/lib/: katconsrvlib.lib
